# focuslock-desktop

./: .dockerignore  .gitignore  .replit  BUILD.md  BUILD_INSTRUCTIONS.md  DESKTOP_APP.md  DESKTOP_BUILD.md  Dockerfile  Dockerfile.windows  build-desktop-backend.sh  build-desktop.sh  build.sh  design_guidelines.md  docker-compose.yml  package-lock.json  package.json  replit.md  tailwind.config.ts
attached_assets/: Pasted--1759357235-App-starting-Log-file-C-Users-satvi-AppData-Local-Temp-focuslock-debug-log-175935-1759360910115_1759360910115.txt  Pasted--1759357235-App-starting-Log-file-C-Users-satvi-AppData-Local-Temp-focuslock-debug-log-175935-1759367712047_1759367712047.txt  Pasted--Compiling-focuslock-v1-0-0-app-src-tauri-tauri-build-windows-1-warning-unused-variable-hk-1759265290677_1759265290678.txt  Pasted--Finished-release-profile-optimized-target-s-in-49-02s-tauri-build-windows-1-Built-a-1759186304589_1759186304590.txt  Pasted--PostCSS-plugin-did-not-pass-the-from-option-to-postcss-parse-This-may-cause-imported-assets-to-1759185762525_1759185762526.txt  Pasted--Steps-to-Fix-the-Failed-to-Fetch-Bug-in-Desktop-Mode-Based-on-the-architecture-description--1759421570307_1759421570308.txt  Pasted-Compiling-sysinfo-v0-31-4-warning-focuslock-1-0-0-GNU-compiler-is-not-supported-for-this-target--1759347781340_1759347781341.txt  Pasted-Platform-Detected-Tauri-Desktop-Mode-3-10-49-PM-Tauri-Using-global-TAURI-core-invoke-3--1759432296172_1759432296173.txt  Pasted-Timer-Error-12-20-59-PM-API-Tauri-command-failed-invalid-args-session-for-command-create-s-1759422123895_1759422123895.txt  Pasted-error-E0432-unresolved-imports-sysinfo-SystemExt-sysinfo-ProcessExt-tauri-build-windows-1--1759237092597_1759237092598.txt  Pasted-warning-focuslock-1-0-0-GNU-compiler-is-not-supported-for-this-target-warning-focuslock-1-0-0-G-1759353059689_1759353059689.txt
client/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
(+30 files in other folders)
