[package]
name = "focuslock"
version = "1.0.0"
description = "FocusLock - Focus Session Management Application"
authors = ["FocusLock Team"]
license = "MIT"
repository = ""
default-run = "focuslock"
edition = "2021"
rust-version = "1.82"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4", features = ["rustls-tls"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
sysinfo = "0.31"
